start team component

--- a/public/app/components/team/team.html
+++ b/public/app/components/team/team.html
@@ -1,21 +1,27 @@
 <h2 class="title has-text-centered">
-    <span class="icon is-medium">
+  <span class="icon is-medium">
         <i class="fa fa-user-o"></i>
-    </span>
-    Notre Equipe
+    </span> Notre Equipe
 </h2>
 
-<div class="columns has-text-centered is-fullwidth">
-  <div class="column">
-    Julien Leotier
-  </div>
-  <div class="column">
-    Amaury Doux
-  </div>
-  <div class="column">
-    Marco Garcia
-  </div>
-  <div class="column">
-    Massimiliano 
+<div class="columns">
+  <div class="column has-text-centered is-10 is-offset-1">
+    <div class="columns">
+      <div class="column">
+        <img src="assets/img/julien.jpg" class="portrait" alt="Portrait Julien Leotier"> Julien Leotier
+      </div>
+      <div class="column">
+        <img src="assets/img/amaury.jpg" class="portrait" alt="Portrait Amaury Doux"> Amaury Doux
+      </div>
+      <div class="column">
+        <img src="assets/img/mass.jpg" class="portrait" alt="Portrait Massimiliano Porrini"> Massimiliano Porrini
+      </div>
+      <div class="column">
+        <img src="assets/img/marco.jpg" class="portrait" alt="Portrait Marco Garcia"> Marco Garcia
+      </div>
+      <div class="column">
+        <img src="assets/img/thibault.jpg" class="portrait" alt="Portrait Thibault Souris"> Thibault Souris
+      </div>
+    </div>
   </div>
 </div>
