--- a/public/app/components/team/team.html
+++ b/public/app/components/team/team.html
@@ -1,3 +1,10 @@
+<div class="columns">
+  <div class="column is-4 is-offset-4">
+    <object id="test" type="image/svg+xml" data="assets/img/alien-04.svg"></object>
+  </div>
+</div>
+
+
 <h2 class="title has-text-centered">
   <span class="icon is-medium">
         <i class="fa fa-user-o"></i>
